tslib 1.24 - unreleased
================================
This release includes libts version 0.10.5 and the following changes:
* improved release procedure
* debug fixes for 32bit systems
* CMake and autoconf updates for newer versions
* fixes for minor cppcheck errors

tslib 1.23 - released 2024-02-20
================================
This release includes libts version 0.10.5 and the following changes:
* new filter module: `module crop`
* some build and security fixes
* improved release procedure

tslib 1.22 - released 2020-07-01
================================
This release includes libts version 0.10.4 and the following changes:
* fix ts_uinput build on 32 bit arch on newer kernels
* ts_uinput: fix building on FreeBSD

tslib 1.21 - released 2019-10-22
================================
This release includes libts version 0.10.3 and the following changes:
* various fixes for cmake builds
* new filter plugin: `module evthres`

tslib 1.20 - released 2019-05-21
================================
This release includes libts version 0.10.2 and the following changes:
* improved documentation for systemd

This release includes the following bugfixes:
* 338891d doc: add CMakeLists.txt to the tarball (fixes cmake build)
* 834b98f variance: move the singletouch warning to debug (fixes ts_uinput)
* 84e15b5 doc: add missing manpages to releases and sort them alphabetically
* 2be6a0e ts_setup: fix possible memory leak

tslib 1.19 - released 2019-01-24
================================
This release includes libts version 0.10.1 and the following changes:
* ts_calibrate: close framebuffer after validation. add timeout option -s for it

This release includes the following bugfixes:
* input-raw / ts_uinput: fix MT type A devices

tslib 1.18 - released 2018-11-27
================================
This release includes libts version 0.10.0 and the following changes:
* support for screen-rotation in ts_calibrate and linear module