@@ -22,7 +22,7 @@ set(LIBTS_VERSION_CURRENT 10)
 set(LIBTS_VERSION_REVISION 5)
 set(LIBTS_VERSION_AGE 10)
 
-set(PACKAGE_VERSION 1.23+)
+set(PACKAGE_VERSION 1.24)
 set(TS_POINTERCAL ${CMAKE_INSTALL_FULL_SYSCONFDIR}/pointercal)
 set(TS_CONF ${CMAKE_INSTALL_FULL_SYSCONFDIR}/ts.conf)
 
