@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.57)
-AC_INIT([tslib], [1.24-rc1+], [tslib@lists.infradead.org], [tslib], [http://tslib.org])
+AC_INIT([tslib], [1.24], [tslib@lists.infradead.org], [tslib], [http://tslib.org])
 # AC_CONFIG_AUX_DIR(config)
 AM_INIT_AUTOMAKE([dist-bzip2 dist-xz subdir-objects])
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES(yes)]) # use silent rules where available - automake 1.11
