@@ -55,8 +55,8 @@ with libinput, providing a filtered device for libinput.
 <p>
 <b>Download tslib</b>
 <p>
-tslib only provides source archives. The latest release is version <b>1.23</b>
-including libts library version 0.10.5, released on the <b>20th of Feb 2024</b>.
+tslib only provides source archives. The latest release is version <b>1.24</b>
+including libts library version 0.10.5, released on the <b>5th of Nov 2025</b>.
 Get it from our <a href="https://github.com/libts/tslib/releases">release page</a>
 (<a href="https://gitlab.com/tslib/tslib/tags">mirror</a>).
 
