@@ -1,10 +1,11 @@
-tslib 1.24 - unreleased
+tslib 1.24 - released 2025-11-05
 ================================
 This release includes libts version 0.10.5 and the following changes:
 * improved release procedure
 * debug fixes for 32bit systems
 * CMake and autoconf updates for newer versions
 * fixes for minor cppcheck errors
+* ts_conf test program fixes
 
 tslib 1.23 - released 2024-02-20
 ================================
